# NUS-ISS-ArchAASTeam4

./: LICENSE  README.md
3-workshop/: README.md  main.py  nodes.py  pyproject.toml  sample_resume.txt  sample_resume_oth.txt  state.py
3-workshop-starter/: pyproject.toml
3-workshop/agents/: __init__.py  coordinator.py  job_search.py  participant.py  pitch_generator.py  relevance_scorer.py  resume_parser.py  summarizer.py
3-workshop/sgkopitiam.egg-info/: PKG-INFO
3-workshop/tools/: __init__.py  job_scrape.py  wikipedia.py
4-workshop/: main.py  nodes.py  pyproject.toml  state.py  utils.py
4-workshop/agents/: coordinator.py  participant.py
4-workshop/ethics_board.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
4-workshop/tools/: singapore_news.py  singapore_time.py
Assignment4/: main.py  nodes.py  pyproject.toml  state.py
Assignment4/agents/: job_searcher.py  relevance_scorer.py  resume_parser.py  router.py
Assignment4/jobconnect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Assignment4/tools/: __init__.py  linkedin_scraper.py  mock_job_platform.py  web_scraper.py
Assignment4/tools/job_search/: __init__.py  linkedin_scraper.py  web_scraper.py
