[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethics-board"
version = "0.1.0"
description = "An AI-powered ethics board discussion simulation"
authors = [
    {name = "Team 4", email = "team4@example.com"},
]
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "langgraph",
    "pytz",
    "openai"
]

[tool.setuptools]
packages = ["agents", "tools"]