[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobconnect"
version = "0.1.0"
description = "JobConnect - multi-agent job search system (Assignment 4)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "NUS-ISS Student", email = "you@example.com" }
]

dependencies = [
  "langchain==0.3.27",
  "langchain-openai==0.2.14",
  "openai>=0.27.0",
  "langgraph>=0.6.6",
  "beautifulsoup4>=4.13.4",
  "httpx>=0.28.1",
  "requests>=2.31.0",
  "python-dotenv>=1.1.1",
  "rich>=13.3.2",
  "selenium>=4.11.0",
  "lxml>=6.0.1",
  "pytz>=2025.2",
  "grandalf>=0.8",
]